--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Estilos para el encabezado */
 body {
     font-family: "Lato", sans-serif;
     margin: 0;
@@ -8,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #131313ea;
+    background-color: #131313f6;
     color: #f5f5f5;
     padding: 10px 50px;
     display: flex;
@@ -18,7 +17,7 @@ header {
 }
 
 .logo img {
-    width: 100px;
+    width: 80px;
 }
 
 nav ul {
@@ -52,59 +51,76 @@ nav a {
 /*  --------------FIN HEADER--------------- */
 
 /* Estilos para la tarjeta de la película en el main */
+
+#products_container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
 .movie-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #dbd9d96d;
+    border: solid 1px #3333331d;
+    ;
+    border-radius: 4px;
+    box-shadow: 6px 6px 12px #9b9b9b,
+        -6px -6px 12px #ffffff;
     margin: 20px auto;
-    max-width: 400px;
+    max-width: 250px;
 }
 
 .card-content {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
     text-align: left;
 }
 
 .card-content img {
+    text-align: center;
     max-width: 100%;
+    border-radius: 4px;
     height: auto;
-    margin-bottom: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .card-content h2 {
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
 .card-content p {
     margin: 0;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.5;
     color: #333;
 }
 
-/* Agrega más estilos según sea necesario */
+.btn-comprar {
+    margin-top: 8px;
+    padding: 8px 0;
+}
 
+/* Agrega más estilos según sea necesario */
 
 /* Estilos para el footer */
 footer {
-    background-color: #131313ea;
+    background-color: #131313f6;
     color: #f5f5f5;
-    padding: 40px 50px;
+    padding: 20px 50px;
     align-items: center;
-    
+
 }
 
 .footer-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 .footer-left img {
-    width: 100px;
+    width: 80px;
 }
 
 .footer-center ul {
