--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ nav a {
 }
 
 .cart {
-    display: flex;
-     
+    display: flex;     
 }
 
 .cart a {
@@ -66,6 +65,7 @@ nav a {
 #products_container {
     padding: 0 70px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 24px;
 }
